# WaveSabre

./: .clang-format  CMakeLists.txt  CMakeSettings.json  README-tenfour.md  README.md  compression20240327.xlsx  sizework20240216.xlsx  sizework20260301.xlsx  sizework20260410.xlsx  switch_to_x64.cmd  switch_to_x86.cmd  ~$sizework20260301.xlsx
Maj7ConsolePlayer/: CMakeLists.txt  main.cpp
ProjectManager/: CMakeLists.txt  CopyIfExists.cmake  ProjectDetails.Designer.cs  ProjectDetails.cs  ProjectManager.Designer.cs  ProjectManager.cs
ProjectManager/Properties/: Resources.Designer.cs  Settings.Designer.cs
Vsts/: CMakeLists.txt
Vsts/Adultery/: AdulteryEditor.cpp  AdulteryEditor.h  AdulteryVst.cpp  AdulteryVst.h
Vsts/Cathedral/: CathedralEditor.h  CathedralVst.cpp  CathedralVst.h
Vsts/Chamber/: ChamberEditor.cpp  ChamberEditor.h  ChamberVst.cpp  ChamberVst.h
Vsts/Crusher/: CrusherEditor.cpp  CrusherEditor.h  CrusherVst.cpp  CrusherVst.h
Vsts/Echo/: EchoEditor.h  EchoVst.cpp  EchoVst.h
Vsts/Falcon/: FalconEditor.cpp  FalconEditor.h  FalconVst.cpp  FalconVst.h
Vsts/Leveller/: LevellerEditor.cpp  LevellerEditor.h  LevellerVst.cpp  LevellerVst.h
Vsts/Maj7/: Maj7Editor.cpp  Maj7Editor.h  Maj7Vst.cpp  Maj7Vst.h
Vsts/Maj7Analyze/: Maj7AnalyzeEditor.h  Maj7AnalyzeVst.cpp  Maj7AnalyzeVst.h
Vsts/Maj7CReverb/: CathedralEditor.cpp  CathedralEditor.h  CathedralVst.cpp  CathedralVst.h
Vsts/Maj7Comp/: Maj7CompEditor.h  Maj7CompVst.cpp  Maj7CompVst.h
Vsts/Maj7Crush/: Maj7CrushEditor.h  Maj7CrushVst.cpp  Maj7CrushVst.h
Vsts/Maj7Delay/: EchoEditor.cpp  EchoEditor.h  EchoVst.cpp  EchoVst.h
Vsts/Maj7EQ/: LevellerEditor.h  LevellerVst.cpp  LevellerVst.h
Vsts/Maj7GigaSynth/: Maj7Editor.cpp  Maj7Editor.h  Maj7Vst.cpp  Maj7Vst.h
Vsts/Maj7MBC/: Maj7MBCEditor.hpp  Maj7MBCVst.cpp  Maj7MBCVst.hpp
Vsts/Maj7Modulate/: Maj7ModulateEditor.hpp  Maj7ModulateVst.cpp  Maj7ModulateVst.hpp
Vsts/Maj7Sat/: Maj7SatEditor.hpp  Maj7SatVst.cpp  Maj7SatVst.hpp
Vsts/Maj7Saturation/: Maj7SatEditor.hpp  Maj7SatVst.cpp  Maj7SatVst.hpp
Vsts/Maj7Space/: Maj7SpaceEditor.h  Maj7SpaceVst.cpp  Maj7SpaceVst.h
Vsts/Maj7StereoImager/: Maj7WidthEditor.h  Maj7WidthVst.cpp  Maj7WidthVst.h
Vsts/Maj7Width/: Maj7WidthEditor.cpp  Maj7WidthEditor.h  Maj7WidthVst.cpp  Maj7WidthVst.h
Vsts/Scissor/: ScissorEditor.cpp  ScissorEditor.h  ScissorVst.cpp  ScissorVst.h
Vsts/Slaughter/: SlaughterEditor.cpp  SlaughterEditor.h  SlaughterVst.cpp  SlaughterVst.h
Vsts/Smasher/: SmasherEditor.cpp  SmasherEditor.h  SmasherVst.cpp  SmasherVst.h
Vsts/Specimen/: SpecimenEditor.cpp  SpecimenEditor.h  SpecimenVst.cpp  SpecimenVst.h
Vsts/Thunder/: ThunderEditor.cpp  ThunderEditor.h  ThunderVst.cpp  ThunderVst.h
Vsts/Twister/: TwisterEditor.cpp  TwisterEditor.h  TwisterVst.cpp  TwisterVst.h
WaveSabreCore/: CMakeLists.txt  SongPayload.hpp  WaveSabreCoreFeatures.hpp  rendered.hpp
WaveSabreCore/Analysis/: AnalysisStream.hpp  FFTAnalysis.cpp  FFTAnalysis.hpp  FrequencyDependentPeakDetector.hpp  PeakDetector.hpp  RMS.hpp  StereoImageAnalysis.hpp
WaveSabreCore/Basic/: Array.hpp  Base.hpp  CriticalSection.hpp  DSPMath.cpp  DSPMath.hpp  Enum.hpp  GmDls.cpp  GmDls.h  Helpers.cpp  Helpers.h  LUTs.cpp  LUTs.hpp  Math.hpp  MathBase.hpp  Memo.hpp  MxcsrFlagGuard.cpp  Noise.cpp  Noise.hpp  Pair.hpp  PodVector.cpp  PodVector.hpp  Serializer.cpp  Serializer.hpp  StrongScalar.hpp  Vector.hpp
WaveSabreCore/DSP/: DelayBuffer.cpp  DelayBuffer.h  DelayCore.hpp  Maj7Envelope.cpp  Maj7Envelope.hpp  Maj7SaturationBase.hpp  ReverbCore.hpp  SamplePlayer.cpp  SamplePlayer.h
WaveSabreCore/Devices/: Cathedral.cpp  Cathedral.h  Echo.cpp  Echo.h  Leveller.cpp  Leveller.h  Maj7Analyze.hpp  Maj7Comp.hpp  Maj7Crush.hpp  Maj7MBC.hpp  Maj7Modulate.hpp  Maj7Sat.hpp  Maj7Space.hpp  Maj7SynthDevice.cpp  Maj7SynthDevice.hpp  Maj7Width.hpp  VoiceAllocator.cpp  VoiceAllocator.hpp
WaveSabreCore/Filters/: AllPass.cpp  AllPass.h  BandSplitter.cpp  BandSplitter.hpp  BiquadFilter.cpp  BiquadFilter.h  Comb.cpp  Comb.h  DCFilter.hpp  FilterBase.cpp  FilterBase.hpp  FilterButterworth.hpp  FilterDiode.hpp  FilterK35.hpp  FilterMoog.cpp  FilterMoog.hpp  FilterOnePole.cpp  FilterOnePole.hpp  LinkwitzRileyFilter.cpp  LinkwitzRileyFilter.hpp  Maj7Filter.cpp  Maj7Filter.hpp  SVFilter.cpp  SVFilter.hpp
WaveSabreCore/GigaSynth/: GigaParams.hpp  GsmSample.cpp  GsmSample.h  Maj7.cpp  Maj7.hpp  Maj7Basic.cpp  Maj7Basic.hpp  Maj7ModMatrix.cpp  Maj7ModMatrix.hpp  Maj7Oscillator.cpp  Maj7Oscillator.hpp  Maj7Oscillator3.hpp  Maj7Oscillator3Base.hpp  Maj7OscillatorBase.hpp  Maj7Sampler.cpp  Maj7Sampler.hpp  Maj7b.cpp  SampleSource.hpp
WaveSabreCore/Params/: GigaSynthParams.cpp  GigaSynthParams.hpp  Maj7ParamAccessor.cpp  Maj7ParamAccessor.hpp  ParamRegistry.hpp  ParamRegistryBasic.hpp  SmoothedParam.hpp
WaveSabreCore/WSCore/: Device.cpp  Device.h
WaveSabreCore/Waveshapes/: Blep.hpp  Maj7Oscillator3Shape.cpp  Maj7Oscillator3Shape.hpp  Maj7Oscillator3Waveshapes.cpp  Maj7Oscillator3Waveshapes.hpp  Maj7Oscillator4WS.hpp
WaveSabreCore/include/: Devices.h  WaveSabreCore.h
WaveSabreCore/src/: Adultery.cpp  AllPass.cpp  BiquadFilter.cpp  Cathedral.cpp  Chamber.cpp  Comb.cpp  Crusher.cpp  DelayBuffer.cpp  Device.cpp  Echo.cpp  FFTAnalysis.cpp  Falcon.cpp  GmDls.cpp  GsmSample.cpp  Helpers.cpp  LUTs.cpp  Leveller.cpp  Maj7.cpp  Maj7Basic.cpp  Maj7Envelope.cpp  Maj7ModMatrix.cpp  Maj7Oscillator.cpp  Maj7ParamAccessor.cpp  Maj7Sampler.cpp  Maj7SynthDevice.cpp  Maj7b.cpp  ResampleBuffer.cpp  SVFilter.cpp  SamplePlayer.cpp  Scissor.cpp  Slaughter.cpp  Smasher.cpp  Specimen.cpp  StateVariableFilter.cpp  SynthDevice.cpp  Twister.cpp
WaveSabreCoreTests/: CMakeLists.txt
WaveSabreCoreTests/src/: DelayBufferTests.cpp  Maj7StartupTests.cpp  MathTests.cpp  (+1 more)
WaveSabreExecutableMusicPlayer/: CMakeLists.txt  config.hpp  main.cpp  player.hpp  rendered.hpp  renderer.hpp  utils.hpp  waveformgen.hpp  wavwriter.hpp
WaveSabreManualTests/: CMakeLists.txt
WaveSabrePlayerLib/: CMakeLists.txt
WaveSabreStandAlonePlayer/: CMakeLists.txt  main.cpp
WaveSabreVstLib/: CMakeLists.txt
(+208 files in other folders)
